--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
   "private": true,
+  "version": "0.0.1",
+  "packageManager": "pnpm@8.6.7",
   "scripts": {
     "build": "turbo run build --no-daemon",
     "dev": "turbo run dev --no-daemon",
     "lint": "turbo run lint --no-daemon",
     "format": "turbo run format --no-daemon",
-    "lint:fix": "turbo run lint:fix --no-daemon"
+    "lint:fix": "turbo run lint:fix --no-daemon",
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "simple-git-hooks"
   },
-  "devDependencies": {
-    "@turbo/gen": "^1.10.7",
-    "eslint": "^8.45.0",
-    "prettier": "^3.0.0",
-    "turbo": "^1.10.7",
-    "unplugin-auto-import": "^0.16.6",
-    "vitest": "^0.33.0"
-  },
-  "packageManager": "pnpm@8.6.7",
   "dependencies": {
     "@gyhyfj/eslint-config": "workspace:^",
     "@gyhyfj/prettier-config": "workspace:^",
     "@gyhyfj/ts-config": "workspace:^"
+  },
+  "devDependencies": {
+    "@turbo/gen": "^1.10.7",
+    "eslint": "^8.45.0",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.0",
+    "simple-git-hooks": "^2.8.1",
+    "turbo": "^1.10.7",
+    "unplugin-auto-import": "^0.16.6",
+    "vitest": "^0.33.0",
+    "zx": "^7.2.3"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged",
+    "commit-msg": "zx scripts/verifyCommit.mjs"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx,vue,css,scss,less,html,md,json}": "prettier --write",
+    "*.{js,ts,jsx,tsx,vue}": "eslint --fix"
   }
 }
