fix: fix path alias of tsconfig

--- a/apps/vue3-csr/tsconfig.json
+++ b/apps/vue3-csr/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "@gyhyfj/ts-config/vue"
+  "extends": "@gyhyfj/ts-config/vue",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  }
 }
