--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "version": "0.0.1",
-  "packageManager": "pnpm@8.6.7",
+  "packageManager": "^pnpm@8.0.0",
   "scripts": {
     "build": "turbo run build --no-daemon",
     "dev": "turbo run dev --no-daemon",
