--- a/apps/vue3-csr/package.json
+++ b/apps/vue3-csr/package.json
@@ -7,7 +7,7 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "lint": "eslint . ",
+    "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
@@ -17,11 +17,11 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/node": "20.6.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
     "sass": "^1.63.6",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
     "vite": "^4.4.0",
     "vue-tsc": "^1.8.3"
   }
