--- a/apps/vue3-electron/tsconfig.json
+++ b/apps/vue3-electron/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@gyhyfj/ts-config/vue",
+  "extends": "@gyhyfj/ts-config/vuejs",
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
