--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@gyhyfj/ts-config": "workspace:^"
   },
   "devDependencies": {
-    "@turbo/gen": "^1.10.7",
-    "eslint": "^8.45.0",
-    "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0",
-    "simple-git-hooks": "^2.8.1",
-    "turbo": "^1.10.7",
+    "@turbo/gen": "^1.10.13",
+    "eslint": "^8.49.0",
+    "lint-staged": "^13.3.0",
+    "prettier": "^3.0.3",
+    "simple-git-hooks": "^2.9.0",
+    "turbo": "^1.10.13",
     "unplugin-auto-import": "^0.16.6",
     "vitest": "^0.33.0",
-    "zx": "^7.2.3"
+    "zx": "^7.2.3",
+    "typescript": "^5.2.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
