--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,14 +5,16 @@
     "format": "prettier --write ."
   },
   "files": [
-    "base-lint.js",
-    "vue-lint.js"
+    "base.js",
+    "vuejs.js",
+    "nextjs.js"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-turbo": "latest",
-    "eslint-plugin-vue": "^9.15.1"
+    "eslint-plugin-vue": "^9.15.1",
+    "eslint-config-next": "13.4.19"
   }
 }
